--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,22 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
+.flex-container{
+  
+  display:flex; 
+  flex-direction:row; 
+  justify-content:center;
+  /* align-content: space-between; */
+  /* flex-start
+flex-end
+center
+
+space-around
+stretch  */
+  /* align-items: center; */
+  /* flex-grow:1; */
+}
+
+/* .rowC{display:flex;} */
